More Chopping of `Optional<List<>>` + test adjustments